apps/base/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: nordvpn
          image: ghcr.io/bubuntux/nordlynx
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            sysctls:
              - name: net.ipv6.conf.all.disable_ipv6
                value: "1"
        - name: qbittorrent
          image: ghcr.io/linuxserver/qbittorrent
          volumeMounts:
            - mountPath: /downloads
              name: qbittorrent-downloads
            - mountPath: /config
              name: qbittorrent-config
          ports:
            - containerPort: 30007
            - containerPort: 8080
      volumes:
        - name: qbittorrent-config
          hostPath:
            path: /opt/kubernetes/data/qbittorrent/config
        - name: qbittorrent-downloads
          hostPath:
            path: /opt/kubernetes/data/qbittorrent/downloads
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
    - port: 30007
      targetPort: 30007
      nodePort: 30007
      protocol: TCP
