apps/base/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: ${ddns_target}
spec:
  ingressClassName: traefik
  rules:
    - host: q.${base_domain}
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 8085
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - q.${base_domain}
      secretName: qbittorrent-tls
